[package]
name = "exec_tts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
clap = { version = "4.4.4", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
rodio = { version = "0.17.1", features = ["minimp3"] }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
tempfile = "3.8.0"
